[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
glam                 = "0.27.0"
once_cell            = "1.19.0"
num-traits           = "0.2.19"
itertools            = "0.13.0"
anyhow               = "1.0.86"
rand                 = "0.9.0-alpha.1"
libc                 = "0.2.155"
criterion            = "0.5.1"
sha2                 = "0.11.0-pre.3"
hex                  = "0.4.3"
walkdir              = "2.5.0"
rayon                = "1.10.0"
aes-gcm              = {"version" = "0.10.3", "features" = ["heapless"]}
winreg               = "0.52.0"
tokio                = {"version" = "1.38.0", "features" = ["full"]}
zip                  = "2.1.3"
#memchr               = "2.7.1"
#rand_chacha          = "0.9.0-alpha.0"
#raw-window-handle    = "0.6.0"
#smallvec             = "2.0.0-alpha.3"
#memoffset            = "0.9.0"
#image                = "0.25.0-preview.0"
#thiserror            = "1.0.57"
#bytemuck             = "1.14.3"
#serde_yaml           = "0.9.32"
#serde_json           = "1.0.114"
#serde                = {"version" = "1.0.197", "features" = ["derive"]}
#ttf-parser           = "0.20.0"
#base64               = "0.21.7"
#xmlwriter            = "0.1.0"
#log                  = "0.4.20"
#env_logger           = "0.11.2"
#pollster             = "0.3.0"
#wgpu                 = "0.19.1"
#gpu-alloc            = "0.6.0"
#zune-jpeg            = "0.4.11"
#zune-png             = "0.4.10"
#zune-qoi             = "0.4.10"
#webp                 = "0.2.6"
#strum                = "0.26.1"
#strum_macros         = "0.26.1"
#sysinfo              = "0.30.5"
#systemstat           = "0.2.3"
#winres               = "0.1.12"
#proc-macro2          = "1.0.78"
#
##winit = { path = "../crates/winit" }
##ttf-parser = { path = "../crates/ttf-parser", features = ["default"] }
#
[dependencies.windows]
version = "0.56.0"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
    "Win32",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
]

#[dev-dependencies]

[profile.dev.package]
zune-png = { opt-level = 3 }
zune-jpeg = { opt-level = 3 }

[build-dependencies]
bindgen = "0.69.4"
winres = "0.1.12"
cmake = "0.1.50"

